--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "subprojects/mimalloc"]
 	path = subprojects/mimalloc
 	url = https://github.com/microsoft/mimalloc.git
+[submodule "subprojects/luajit"]
+	path = subprojects/luajit
+	url = https://luajit.org/git/luajit.git
