--- a/resources/meson.build
+++ b/resources/meson.build
@@ -1,88 +1,74 @@
-rendered_icons_optionally_from_svg = {
-	'icon_exe'   : { 'png': 'icon_exe.png'   , 'svg': 'icon_exe.svg', 'width': '256', 'height': '256' },
-	'icon_exe_48': { 'png': 'icon_exe_48.png', 'svg': 'icon_exe.svg', 'width':  '48', 'height':  '48' },
-	'icon_exe_32': { 'png': 'icon_exe_32.png', 'svg': 'icon_exe.svg', 'width':  '32', 'height':  '32' },
-	'icon_exe_16': { 'png': 'icon_exe_16.png', 'svg': 'icon_exe.svg', 'width':  '16', 'height':  '16' },
-	'icon_cps'   : { 'png': 'icon_cps.png'   , 'svg': 'icon_cps.svg', 'width': '256', 'height': '256' },
-	'icon_cps_48': { 'png': 'icon_cps_48.png', 'svg': 'icon_cps.svg', 'width':  '48', 'height':  '48' },
-	'icon_cps_32': { 'png': 'icon_cps_32.png', 'svg': 'icon_cps.svg', 'width':  '32', 'height':  '32' },
-	'icon_cps_16': { 'png': 'icon_cps_16.png', 'svg': 'icon_cps.svg', 'width':  '16', 'height':  '16' },
-}
+rendered_icon_variants = [
+	{ 'output_suffix': '.png', 'target_suffix': '-from-svg', 'width': 256, 'height': 256, },
+	{ 'output_suffix': '_48.png', 'target_suffix': '_48-from-svg', 'width': 48, 'height': 48, },
+	{ 'output_suffix': '_32.png', 'target_suffix': '_32-from-svg', 'width': 32, 'height': 32, },
+	{ 'output_suffix': '_16.png', 'target_suffix': '_16-from-svg', 'width': 16, 'height': 16, },
+]
+
+rendered_icon_defs = [
+	{ 'name': 'icon_exe', 'input': 'icon_exe.svg', },
+	{ 'name': 'icon_cps', 'input': 'icon_cps.svg', },
+]
+
 rendered_icons = {}
-if render_icons_with_inkscape.allowed()
-	foreach key, info : rendered_icons_optionally_from_svg
-		rendered_icons += { key: custom_target(
-			key + '-from-svg',
-			output: info['png'],
-			command: [
-				inkscape,
-				'--export-area-page',
-				'--export-type', 'png',
-				'--export-filename', '@OUTPUT@',
-				'--export-width', info['width'],
-				'--export-height', info['height'],
-				files(info['svg']),
-			],
-		) }
+
+foreach def : rendered_icon_defs
+	rendered_icon = []
+	foreach variant : rendered_icon_variants
+		if render_icons_with_inkscape.allowed()
+			rendered_icon += custom_target(
+				def['name'] + variant['target_suffix'],
+				output: def['name'] + variant['output_suffix'],
+				command: [
+					inkscape,
+					'--export-area-page',
+					'--export-type', 'png',
+					'--export-filename', '@OUTPUT@',
+					'--export-width', variant['width'],
+					'--export-height', variant['height'],
+					files(def['input']),
+				],
+			)
+		else
+			rendered_icon += files('generated_icons' / def['name'] + variant['output_suffix'])
+		endif
 	endforeach
-else
-	foreach key, info : rendered_icons_optionally_from_svg
-		rendered_icons += { key: files('generated_icons/' + info['png']) }
-	endforeach
-endif
+	rendered_icons += { def['name']: rendered_icon }
+endforeach
 
 if host_platform == 'windows'
-	windows_icons = get_option('windows_icons')
-	windows_utf8cp = get_option('windows_utf8cp')
-	rc_conf_depends = []
-	rc_conf_depend_files = [
-		'resource.h',
-	]
-	icon_exe_ico_path = ''
-	icon_cps_ico_path = ''
-	winutf8_xml_path = ''
-	if windows_icons
-		generated_win_icos = {}
-		win_icos = {
-			'icon_exe': [ 'icon_exe', 'icon_exe_48', 'icon_exe_32', 'icon_exe_16' ],
-			'icon_cps': [ 'icon_cps', 'icon_cps_48', 'icon_cps_32', 'icon_cps_16' ],
-		}
-		foreach key, icons : win_icos
-			command = [
-				python3_prog,
-				join_paths(meson.current_source_dir(), 'make-ico.py'),
-				'@OUTPUT@',
-			]
-			foreach ikey : icons
-				command += [ rendered_icons[ikey] ]
-			endforeach
-			generated_win_icos += { key: custom_target(
-				key + '-ico',
-				output: key + '.ico',
-				command: command,
-			) }
-		endforeach
-		rc_conf_depends += [
-			generated_win_icos['icon_exe'],
-			generated_win_icos['icon_cps'],
-		]
-		icon_exe_ico_path = join_paths(meson.current_build_dir(), 'icon_exe.ico')
-		icon_cps_ico_path = join_paths(meson.current_build_dir(), 'icon_cps.ico')
-	endif
-	if windows_utf8cp
-		rc_conf_depend_files += [
-			'winutf8.xml',
-		]
-		winutf8_xml_path = join_paths(meson.current_source_dir(), 'winutf8.xml')
-	endif
 	rc_conf_data = configuration_data()
 	rc_conf_data.merge_from(conf_data)
-	rc_conf_data.set('HAVE_ICONS', windows_icons ? 1 : 0)
-	rc_conf_data.set('HAVE_UTF8CP', windows_utf8cp ? 1 : 0)
-	rc_conf_data.set('RESOUCE_H', join_paths(meson.current_source_dir(), 'resource.h'))
-	rc_conf_data.set('WINUTF8_XML', winutf8_xml_path)
-	rc_conf_data.set('ICON_EXE_ICO', icon_exe_ico_path)
-	rc_conf_data.set('ICON_CPS_ICO', icon_cps_ico_path)
+	rc_conf_depends = []
+	rc_conf_depend_files = []
+
+	windows_icons = get_option('windows_icons')
+	windows_utf8cp = get_option('windows_utf8cp')
+
+	rc_conf_data.set10('HAVE_ICONS', windows_icons)
+	rc_conf_data.set10('HAVE_UTF8CP', windows_utf8cp)
+	rc_conf_data.set('ACTIVE_CODEPAGE_MANIFEST_ENTRY',
+		windows_utf8cp
+		? '<activeCodePage xmlns="http://schemas.microsoft.com/SMI/2019/WindowsSettings">UTF-8</activeCodePage>'
+		: ''
+	)
+
+	rc_conf_depend_files += [ 'resource.h' ]
+
+	if windows_icons
+		foreach name, rendered_icon : rendered_icons
+			rc_conf_depends += custom_target(
+				name + '-ico',
+				output: name + '.ico',
+				command: [ python3_prog, files('make-ico.py'), '@OUTPUT@', rendered_icon ],
+			)
+		endforeach
+	endif
+	rc_conf_depend_files += configure_file(
+		input: 'manifest.template.xml',
+		output: 'manifest.xml',
+		configuration: rc_conf_data,
+	)
 	powder_files += windows_mod.compile_resources(
 		configure_file(
 			input: 'powder-res.template.rc',
@@ -91,6 +77,7 @@ if host_platform == 'windows'
 		),
 		depends: rc_conf_depends,
 		depend_files: rc_conf_depend_files,
+		include_directories: include_directories('.'),
 	)
 elif host_platform == 'darwin'
 	configure_file(
