--- a/resources/powder-res.template.rc
+++ b/resources/powder-res.template.rc
@@ -1,19 +1,17 @@
 #pragma code_page(65001) // UTF-8
 
-#include "@RESOUCE_H@"
+#include <resource.h>
 #include <winuser.h>
 #include <winver.h>
 // #include <ntdef.h> // maybe not needed?
 
-#define HAVE_ICONS @HAVE_ICONS@
-#define HAVE_UTF8CP @HAVE_UTF8CP@
+#mesondefine HAVE_ICONS
+#mesondefine HAVE_UTF8CP
 #if HAVE_ICONS
-IDI_ICON ICON DISCARDABLE "@ICON_EXE_ICO@"
-IDI_DOC_ICON ICON DISCARDABLE "@ICON_CPS_ICO@"
+IDI_ICON ICON DISCARDABLE "icon_exe.ico"
+IDI_DOC_ICON ICON DISCARDABLE "icon_cps.ico"
 #endif
-#if HAVE_UTF8CP
-CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "@WINUTF8_XML@"
-#endif
+CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "manifest.xml"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION @DISPLAY_VERSION_MAJOR@,@DISPLAY_VERSION_MINOR@,0,@BUILD_NUM@
