--- a/src/common/meson.build
+++ b/src/common/meson.build
@@ -3,6 +3,17 @@ common_files += files(
 	'String.cpp',
 	'tpt-rand.cpp',
 )
+common_inc_files += files(
+	'Version.h',
+	'VariantIndex.h',
+	'Defer.h',
+	'ExplicitSingleton.h',
+	'Vec2.h',
+	'Plane.h',
+	'RasterGeometry.h',
+	'String.h',
+	'tpt-rand.h',
+)
 
 subdir('clipboard')
 subdir('platform')
